--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+  <h1 id="center">My Page</h1>
+  <canvas id="canvas"></canvas>
   <script src="js/scripts.js"></script>
 </body>
 </html>
